[package]
name = "osx-screensaver"
version = "0.1.0"
authors = ["Gabin Lefranc <glefranc@eig.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.6.0"
winit = "0.23.0"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.1"
glob = "0.3"
shaderc = "0.6"